Missing tooltip for forcefield setting "Falloff/Power" #58750

Closed
opened 2018-12-04 22:55:51 +01:00 by user1 · 8 comments

System Information
Operating system: Linux Mint 19 Tara
Graphics card: Nvidia GeForce GT 630

Blender Version
Broken:
2.80 (sub 35), branch: blender2.8, commit date: 2018-12-04 16:52, hash: 7e5f31be41, type: Release

Short description of error

The tooltip for a single setting of force fields is missing:
Properties/Physics/Falloff/Power

**System Information** Operating system: Linux Mint 19 Tara Graphics card: Nvidia GeForce GT 630 **Blender Version** Broken: 2.80 (sub 35), branch: blender2.8, commit date: 2018-12-04 16:52, hash: 7e5f31be418, type: Release **Short description of error** The tooltip for a single setting of force fields is missing: Properties/Physics/Falloff/Power
Author

Added subscriber: @user1

Added subscriber: @user1

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2018-12-06 20:34:53 +01:00

I've submitted a fix: D4042

I've submitted a fix: [D4042](https://archive.blender.org/developer/D4042)
Author

Does that mean i have to close the thread now? Sorry if my question sound silly. I'm still learning. I read your tooltip. Like that formula part.

Does that mean i have to close the thread now? Sorry if my question sound silly. I'm still learning. I read your tooltip. Like that formula part.

We do not close this now. We will close it when my patch has been accepted or if it is decided to keep it as it is now.

We do not close this now. We will close it when my patch has been accepted or if it is decided to keep it as it is now.
Author

roger :)

roger :)

This issue was referenced by 497a9ef7a3

This issue was referenced by 497a9ef7a39608d62df83c10e209f22809e94e6e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58750
No description provided.