Fix T58750: missing fallof power tooltip.

Differential Revision: https://developer.blender.org/D4042