source/blender/makesrna/intern/rna_object_force.c
@@ -1266,7 +1266,7 @@ static void rna_def_field(BlenderRNA *brna)
 	prop = RNA_def_property(srna, "falloff_power", PROP_FLOAT, PROP_NONE);
 	RNA_def_property_float_sdna(prop, NULL, "f_power");
 	RNA_def_property_range(prop, 0.0f, 10.0f);
-	RNA_def_property_ui_text(prop, "Falloff Power", "");
+	RNA_def_property_ui_text(prop, "Falloff Power", "How quickly strength falls off with distance from the force field");
 	RNA_def_property_update(prop, 0, "rna_FieldSettings_update");
 
 	prop = RNA_def_property(srna, "distance_min", PROP_FLOAT, PROP_NONE);
